Update Invariance in time-frequency representations.ipynb
exponential_decay docstring

--- a/tps/tpInv/Invariance in time-frequency representations.ipynb
+++ b/tps/tpInv/Invariance in time-frequency representations.ipynb
@@ -78,9 +78,17 @@
    "outputs": [],
    "source": [
     "def exponential_decay(duration=1.0, decay_time=0.05, sr=22050.0):\n",
-    "    \"\"\"Return a real-valued signal x such that x(0)=1 and\n",
-    "    such that the amplitude of x decreases by a factor 2\n",
-    "    after every decay_time.\n",
+    "    \"\"\"Return a real-valued signal x whose amplitude decreases exponentially.\n",
+    "    It should satisfy: \n",
+    "        x(0) = 1\n",
+    "        x(decay_time) = 1/2\n",
+    "        x(2*decay_time) = 1/4\n",
+    "    etc.\n",
+    "    Parameters:\n",
+    "    ----------\n",
+    "    duration: float, the total duration of the signal in seconds\n",
+    "    decay_time: float, the time it takes for the amplitude to decrease by a factor of 2\n",
+    "    sr: float, the sample rate in Hz\n",
     "    \"\"\"\n",
     "    # TODO\n",
     "    # Consider using: np.arange, np.exp\n",
