sr, duration, decay_time order of arguments

--- a/tps/tpInv/Invariance in time-frequency representations.ipynb
+++ b/tps/tpInv/Invariance in time-frequency representations.ipynb
@@ -77,7 +77,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def exponential_decay(duration=1.0, decay_time=0.05, sr=22050.0):\n",
+    "def exponential_decay(sr=22050.0, duration=1.0, decay_time=0.05):\n",
     "    \"\"\"Return a real-valued signal x whose amplitude decreases exponentially.\n",
     "    It should satisfy: \n",
     "        x(0) = 1\n",
@@ -86,9 +86,9 @@
     "    etc.\n",
     "    Parameters:\n",
     "    ----------\n",
+    "    sr: float, the sample rate in Hz\n",
     "    duration: float, the total duration of the signal in seconds\n",
     "    decay_time: float, the time it takes for the amplitude to decrease by a factor of 2\n",
-    "    sr: float, the sample rate in Hz\n",
     "    \"\"\"\n",
     "    # TODO\n",
     "    # Consider using: np.arange, np.exp\n",
