carrier frequency in Hertz

--- a/tps/tpInv/Invariance in time-frequency representations.ipynb
+++ b/tps/tpInv/Invariance in time-frequency representations.ipynb
@@ -297,7 +297,7 @@
     "    sr: sample rate in Hertz\n",
     "    duration: duration in seconds\n",
     "    decay_time: decay time in seconds\n",
-    "    carrier_frequency: carrier frequency in seconds\n",
+    "    carrier_frequency: carrier frequency in Hertz\n",
     "    \"\"\"\n",
     "    # TODO\n",
     "    # Consider using: np.arange, np.sin, exponential_decay\n",
@@ -634,7 +634,7 @@
     "    ----------\n",
     "    sr: sample rate in Hertz\n",
     "    duration: duration in seconds\n",
-    "    carrier_frequency: carrier frequency in seconds\n",
+    "    carrier_frequency: carrier frequency in Hertz\n",
     "    \"\"\"\n",
     "    # Consider using: np.arange, signal.sawtooth\n",
     "    return x\n",
@@ -646,7 +646,7 @@
     "    ----------\n",
     "    sr: sample rate in Hertz\n",
     "    duration: duration in seconds\n",
-    "    carrier_frequency: carrier frequency in seconds\n",
+    "    carrier_frequency: carrier frequency in Hertz\n",
     "    \"\"\"\n",
     "    # Consider using: np.arange, signal.square\n",
     "    return x"
