--- a/tps/tpInv/Invariance in time-frequency representations.ipynb
+++ b/tps/tpInv/Invariance in time-frequency representations.ipynb
@@ -764,9 +764,9 @@
    "source": [
     "*Question*\n",
     "\n",
-    "4. Without doing any computation, fill in the table below. Try imagining if the cosine distance between `x1_tri` and `x2_tri` will be qualitatively \"small\" or \"large\" depending on the representation domain. Same with the distance bwetween `x2_tri` and `x2_squ`.\n",
+    "4. Without doing any computation, fill in the table below. Try imagining if the cosine distance between `x1_squ` and `x2_squ` will be qualitatively \"small\" or \"large\" depending on the representation domain. Same with the distance bwetween `x2_squ` and `x2_tri`.\n",
     "\n",
-    "Reminder: `x2_tri` has the wave shape as `x1_tri` but a different fundamental frequency. `x2_squ` has the same fundamental frequency as `x2_tri` but a different wave shape."
+    "Reminder: `x2_squ` has the wave shape as `x1_squ` but a different fundamental frequency. `x2_squ` has the same fundamental frequency as `x2_tri` but a different wave shape."
    ]
   },
   {
@@ -775,7 +775,7 @@
    "metadata": {},
    "source": [
     "```\n",
-    "| Representation                          | dist(x1_tri, x2_tri)   | dist(x2_tri, x2_squ)   |\n",
+    "| Representation                          | dist(x1_squ, x2_squ)   | dist(x2_tri, x2_squ)   |\n",
     "|-----------------------------------------|------------------------|------------------------|\n",
     "| waveform                                | ?????                  | ?????                  |\n",
     "| Fourier spectrum                        | ?????                  | ?????                  |\n",
