Update Invariance in time-frequency representations.ipynb

--- a/tps/tpInv/Invariance in time-frequency representations.ipynb
+++ b/tps/tpInv/Invariance in time-frequency representations.ipynb
@@ -1045,7 +1045,7 @@
     "\n",
     "5. Is the averaged scalogram invariant to time shifts? If so, up to what amount?\n",
     "6. Is the averaged scalogram invariant to musical pitch shifts? If so, up to what amount?\n",
-    "7. Do you have an idea on how you could boost the second distance (x1_squ <-> x2_squ) while keeping the first distance (x2_squ <-> x2_tri) at a low value?"
+    "7. Do you have an idea on how you could boost the second distance (x2_tri <-> x2_squ) while keeping the first distance (x1_squ <-> x2_squ) at a low value?"
    ]
   }
  ],
