update TP invariance

--- a/tps/tpInv/Invariance in time-frequency representations.ipynb
+++ b/tps/tpInv/Invariance in time-frequency representations.ipynb
@@ -79,7 +79,7 @@
    "source": [
     "def exponential_decay(sr=22050.0, duration=1.0, decay_time=0.05):\n",
     "    \"\"\"Return a real-valued signal x whose amplitude decreases exponentially.\n",
-    "    It should satisfy: \n",
+    "    The signal x should be continuous and should satisfy: \n",
     "        x(0) = 1\n",
     "        x(decay_time) = 1/2\n",
     "        x(2*decay_time) = 1/4\n",
@@ -91,7 +91,7 @@
     "    decay_time: float, the time it takes for the amplitude to decrease by a factor of 2\n",
     "    \"\"\"\n",
     "    # TODO\n",
-    "    # Consider using: np.arange, np.exp\n",
+    "    # Consider using: np.arange, np.power\n",
     "    return x"
    ]
   },
@@ -627,7 +627,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def sawtooth_wave(sr, duration, carrier_frequency):\n",
+    "def triang_wave(sr, duration, carrier_frequency):\n",
     "    \"\"\"Return a sawtooth wave.\n",
     "    \n",
     "    Parameters\n",
@@ -637,6 +637,7 @@
     "    carrier_frequency: carrier frequency in Hertz\n",
     "    \"\"\"\n",
     "    # Consider using: np.arange, signal.sawtooth\n",
+    "    # Read the documentation of signal.sawtooth, in particular the width keyword argument\n",
     "    return x\n",
     "\n",
     "def square_wave(sr, duration, carrier_frequency):\n",
